--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
+		"react-components": "^0.5.1",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.12.1",
+		"react-router-dom": "^6.13.0",
 		"react-scripts": "5.0.1",
 		"sass": "^1.62.1",
+		"styled-component": "^2.8.0",
+		"styled-components": "^5.3.11",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
