--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.12.1",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"sass": "^1.62.1",
 		"styled-components": "^5.3.11",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-scripts --openssl-legacy-provider start",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
 		"build": "react-scripts build",
@@ -43,6 +43,7 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^5.0.0"
+		"gh-pages": "^5.0.0",
+		"standard": "^17.1.0"
 	}
 }
