--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
 	"homepage": "http://n1kalai.github.io/DI-march",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.10.1",
+		"react-redux": "^8.1.1",
+		"react-router-dom": "^6.14.1",
 		"react-scripts": "5.0.1",
 		"sass": "^1.62.1",
+		"styled-components": "^6.0.3",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
